# fhirHouse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FHIRHOUSE.md  LICENSE  NOTICE  README.md  SECURITY.md  STATUS.md  bootstrap-fork.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fhirhouse-ci.yml  release.yml
contracts/: README.md  drift_test.py  gold_schema.snapshot.json  pin_schema.py
contracts/fhirhouse_contracts/: __init__.py  catalog.py  reads.py  schema.py  sidecar.py
contracts/tests/: test_contracts.py
dagster/: README.md
dagster/fhirhouse_dagster/: chunked_promote.py  definitions.py
dagster/tests/: test_chunked_promote.py  test_definitions.py
dbt/: README.md  dbt_project.yml  profiles.example.yml  profiles.yml
dbt/macros/: delta.sql  sof.sql
deploy/: .env.example  .env.op  Dockerfile.server  Dockerfile.sidecar  README.md  docker-compose.prod.yml  docker-compose.yml
docs/decisions/: 0002-runtime-language-and-stack.md  0012-master-patient-index.md  0013-deployment-posture.md  0021-install-audit-and-runbooks.md  0022-standalone-storage-flattening-and-catalog-seam.md  0023-open-source-licensing-and-open-core-model.md  0024-clean-room-r4-columnar-schema-generator.md  0025-catalog-governance-binding-seam.md  0026-medallion-promotion-orchestration.md  0027-governed-view-layer-sql-on-fhir.md  0028-cross-product-platform-alignment.md  0029-runtime-and-stack.md  0030-standalone-security-privacy-consent-enforcement.md  0031-tls-and-transport-security.md  0032-production-security-profile.md  0033-http-tier-hardening.md  0034-supply-chain-sbom-dependency-scanning.md  0035-audit-log-integrity-and-retention.md  0036-udap-b2b-trust.md  FH-0001-vision-scope-and-open-core.md  FH-0002-topology-support-medallion-first.md  FH-0003-compute-engine-duckdb-readside.md  FH-0004-governance-dq-mdm-lineage-scope.md  FH-0005-sql-on-fhir-view-layer.md  FH-INDEX.md  INDEX.md
docs/governance/: component-disclosure-review.md
docs/research/: 2026-07-03-tls-and-cms-compliance-security-deep-dive.md  2026-07-06-bulk-1k-patient-test-run.md  2026-07-06-healthsamurai-benchmark-fhirengine.md  2026-07-06-sql-on-fhir-view-layer.md
dq/: README.md  domains.yml
dq/tests/: test_kahn.py  (+1 more)
lineage/: README.md
mdm/: .gitignore  README.md  config.example.yml
views/: README.md  demo_materialize.py
warehouse-gov/: README.md
(+529 files in other folders)
